# wnacg-mini-downloader

./: .gitignore  LICENSE  README.md  download_manager.py  gui.py  main.py  old_gui.py  pyproject.toml  requirements.txt  utils.py
core/: config_manager.py  event_bus.py  exceptions.py  logger.py
network/: client.py  extractor.py  parser_rules.json
services/: download_manager.py  search_service.py  update_service.py
ui/: app.py  ui_utils.py
ui/components/: scrollable_frame.py
ui/views/: queue_panel.py  search_panel.py  settings_view.py
