[project]
name = "wnacg-mini-downloader"
version = "2.0.0"
description = "A lightweight concurrent downloader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "pillow>=10.0.0"
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "F401", "E722", "E701", "F841"]
